--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
   </head>
   <body>
     <div class="container"></div>
-    </div>
-    <script src="/static/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
